--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "fastapi-boilerplate"
+name = "QuikWing-Serv"
 version = "0.1.0"
-description = "Batteries-included FastAPI starter with production-ready defaults, optional modules, and clear docs."
-authors = [{ name = "Benav Labs", email = "contact@benav.io" }]
+description = ""
+authors = [{ name = "D-BAZ", email = "d.baz@gmail.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.11, <4"
